<resources>
    <string name="app_name">BlueControl</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recycler_view_empty">Nothing</string>
    <string name="bluttooth_not_avalable">Bluetooth is not available</string>
    <string name="bluetooth_not_enabled">Bluetooth was not enabled.</string>
    <string name="no_connected_device">Not connected device</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connect_to">"Connected to "</string>
    <string name="nothing" />
    <string name="custom_text">Custom Text</string>
    <string name="search">Search</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="setting">Setting</string>
    <string name="no_device_found">No devices found</string>
    <string name="lf">\n</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
</resources>
