<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <com.malinskiy.superrecyclerview.SuperRecyclerView

        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_empty="@layout/recycler_empty_view"
        app:layout_moreProgress="@layout/view_more_progress"
        app:mainLayoutId="@layout/layout_recycler_view_vertical"
        app:recyclerClipToPadding="false"
        app:recyclerPadding="0dp"
        app:scrollbarStyle="insideInset" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:scaleType="centerInside"
        app:menu_icon="@drawable/ic_fab_more"
        fab:menu_colorNormal="@color/light_grey">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fab_up"
            fab:fab_colorNormal="@color/light_grey"
            fab:fab_label="@string/up"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fab_down"
            fab:fab_colorNormal="@color/light_grey"
            fab:fab_label="@string/down"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fab_lock"
            fab:fab_colorNormal="@color/light_grey"
            fab:fab_label="@string/lock"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fab_unlock"
            fab:fab_colorNormal="@color/light_grey"
            fab:fab_label="@string/unlock"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fab_setting"
            fab:fab_colorNormal="@color/light_grey"
            fab:fab_label="@string/setting"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</FrameLayout>